# amvera-monitoring-module

./: .env.example  .gitignore  README.md  README.ru.md  amvera.yml.example  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
admin/: system_metric_admin.py
api/: metrics_router.py
integration/: scheduler_setup.py  startup.py
models/: system_metric.py
services/: monitor.py
tests/: conftest.py  test_edge.py  test_monitor.py  test_perf.py  test_security.py  test_unit.py
