[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amvera-monitoring-module"
version = "0.1.0"
description = "Лёгкий модуль мониторинга ресурсов контейнера Amvera с алертами в Telegram"
requires-python = ">=3.10"
dependencies = [
    "psutil>=6.1,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "httpx2>=2.5",
    "ruff>=0.5",
    "bandit[toml]>=1.7",
    "mypy>=1.10",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=services",
    "--cov=models",
    "--cov=api",
    "--cov=integration",
    "--cov=admin",
    "--cov=tests",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=85",
]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:starlette.*:",
]

[tool.coverage.run]
branch = true
source = [
    "services",
    "models",
    "api",
    "integration",
    "admin",
    "tests",
]
omit = [
    "*/.venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long — handled by formatter, comments in Russian are verbose
    "B008",  # FastAPI Depends()/Query() in argument defaults — expected idiom
]

[tool.ruff.lint.per-file-ignores]
# Bootstrap `app`-пакета в тестах требует sys.modules-манипуляций перед импортом.
"tests/*.py" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    ".venv",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]  # assert используется в тестах
